# pytesseractPackage

./: README.md  pyproject.toml
src/sinapsis_pytesseract/configs/: pytesseract_labelDrawer.yaml  pytesseract_textIdInference.yaml
src/sinapsis_pytesseract/helpers/: tags.py
src/sinapsis_pytesseract/templates/: __init__.py  pytesseract_ocr.py
