[project]
name = "sinapsis-pytesseract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "SinapsisAI", email = "dev@sinapsis.tech" }]
requires-python = ">=3.10.12"
dependencies = [
    "pytesseract>=0.3.13",
    "sinapsis>=0.2.22",
]

[tool.ruff]
lint.select = [
    "ARG",
    "ANN",
    "BLE",
    "C4",
    "E",
    "F",
    "FIX",
    "FLY",
    "I",
    "PERF",
    "PIE",
    "PLR6301",
    "RUF",
    "RSE",
    "SIM",
    "SLOT",
    "T10",
    "T20",
    "TD",
    "TID",
]
lint.preview = true
lint.ignore = ['ANN401']
line-length = 120
show-fixes = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://pypi.sinapsis.tech/"

[project.urls]
Homepage = "https://sinapsis.tech"
Documentation = "https://docs.sinapsis.tech/docs"
Tutorials = "https://docs.sinapsis.tech/tutorials"
Repository = "https://github.com/Sinapsis-AI/sinapsis-ocr.git"

[project.optional-dependencies]
sinapsis-data-readers = [
    "sinapsis-data-readers[all]>=0.1.17",
]
sinapsis-data-writers = [
    "sinapsis-data-writers>=0.1.0",
]